; ModuleID = '/home/carl/AnghaBench/linux/samples/kprobes/extr_kretprobe_example.c_entry_handler.c'
source_filename = "/home/carl/AnghaBench/linux/samples/kprobes/extr_kretprobe_example.c_entry_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.kretprobe_instance = type { i64 }
%struct.pt_regs = type { i32 }
%struct.my_data = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kretprobe_instance*, %struct.pt_regs*)* @entry_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @entry_handler(%struct.kretprobe_instance* %0, %struct.pt_regs* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kretprobe_instance*, align 8
  %5 = alloca %struct.pt_regs*, align 8
  %6 = alloca %struct.my_data*, align 8
  store %struct.kretprobe_instance* %0, %struct.kretprobe_instance** %4, align 8
  store %struct.pt_regs* %1, %struct.pt_regs** %5, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %20

12:                                               ; preds = %2
  %13 = load %struct.kretprobe_instance*, %struct.kretprobe_instance** %4, align 8
  %14 = getelementptr inbounds %struct.kretprobe_instance, %struct.kretprobe_instance* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to %struct.my_data*
  store %struct.my_data* %16, %struct.my_data** %6, align 8
  %17 = call i32 (...) @ktime_get()
  %18 = load %struct.my_data*, %struct.my_data** %6, align 8
  %19 = getelementptr inbounds %struct.my_data, %struct.my_data* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %12, %11
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @ktime_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
